--- a/src/backend/rag_langchain/test_lang_chain.ipynb
+++ b/src/backend/rag_langchain/test_lang_chain.ipynb
@@ -172,6 +172,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c5715ec5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key = \"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\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "5071a5f7",
    "metadata": {},
